@@ -8,6 +8,50 @@ plugins {
 
 description = "Hedera Services Test Clients for End to End Tests (EET)"
 
+// Detect available resources and scale JVM settings accordingly
+val availableCpus = Runtime.getRuntime().availableProcessors()
+val totalMemoryGib: Double =
+    try {
+        val osName = System.getProperty("os.name", "").lowercase()
+        if (osName.contains("linux")) {
+            // Try cgroup limit first (container-aware), fall back to /proc/meminfo
+            val cgroupV2 = File("/sys/fs/cgroup/memory.max")
+            val cgroupV1 = File("/sys/fs/cgroup/memory/memory.limit_in_bytes")
+            val cgroupBytes: Long? =
+                when {
+                    cgroupV2.exists() -> cgroupV2.readText().trim().toLongOrNull()
+                    cgroupV1.exists() -> cgroupV1.readText().trim().toLongOrNull()
+                    else -> null
+                }
+            if (cgroupBytes != null && cgroupBytes < Long.MAX_VALUE / 2) {
+                cgroupBytes / 1024.0 / 1024.0 / 1024.0
+            } else {
+                val memLine =
+                    File("/proc/meminfo").readLines().first { line -> line.startsWith("MemTotal") }
+                memLine.split("\\s+".toRegex())[1].toLong() / 1024.0 / 1024.0
+            }
+        } else {
+            // macOS/other: use Gradle JVM max memory as a proxy, fallback to 16 GiB
+            // This is the Gradle daemon's max heap, not physical RAM, but provides a
+            // reasonable lower bound for scaling test settings
+            Runtime.getRuntime().maxMemory() / 1024.0 / 1024.0 / 1024.0
+        }
+    } catch (_: Exception) {
+        16.0
+    }
+// Use all available processors but cap at 8 to avoid excessive thread contention
+val testProcessorCount = availableCpus.coerceAtMost(8)
+// Parallelism is set per-task based on actual node count (see testSubprocessConcurrent below)
+// Reserve ~half of total memory for the test client JVM, leave the rest for forked node JVMs and OS
+val testClientHeapGib = (totalMemoryGib / 2).toInt().coerceIn(4, 8)
+val testMaxHeap = "${testClientHeapGib}g"
+// Pass remaining memory pool to ProcessUtils, which divides by actual node count at runtime
+val nodePoolMib = ((totalMemoryGib - testClientHeapGib) * 1024 * 0.8).toInt().coerceAtLeast(2048)
+
+logger.lifecycle(
+    "Test resource detection: cpus=$availableCpus, totalMem=${String.format("%.1f", totalMemoryGib)}GiB -> processorCount=$testProcessorCount, clientHeap=$testMaxHeap, nodePool=${nodePoolMib}m"
+)
+
 mainModuleInfo {
     runtimeOnly("org.junit.jupiter.engine")
     runtimeOnly("org.junit.platform.launcher")
@@ -58,17 +102,16 @@ tasks.test {
     // Tell our launcher to target an embedded network whose mode is set per-class
     systemProperty("hapi.spec.embedded.mode", "per-class")
 
-    // Limit heap and number of processors
-    maxHeapSize = "8g"
-    jvmArgs("-XX:ActiveProcessorCount=6")
+    // Scale heap and processor count to match available resources
+    maxHeapSize = testMaxHeap
+    jvmArgs("-XX:ActiveProcessorCount=$testProcessorCount")
 }
 
 val miscTags =
-    "!(INTEGRATION|CRYPTO|TOKEN|RESTART|UPGRADE|SMART_CONTRACT|ND_RECONNECT|LONG_RUNNING|STATE_THROTTLING|ISS|BLOCK_NODE|SIMPLE_FEES|ATOMIC_BATCH)"
+    "!(INTEGRATION|CRYPTO|TOKEN|RESTART|UPGRADE|SMART_CONTRACT|ND_RECONNECT|LONG_RUNNING|STATE_THROTTLING|ISS|BLOCK_NODE|SIMPLE_FEES|ATOMIC_BATCH|WRAPS_DOWNLOAD)"
 val miscTagsSerial = "$miscTags&SERIAL"
-val matsSuffix = "MATS"
 
-val basePrCheckTags =
+val prCheckTags =
     mapOf(
         "hapiTestAdhoc" to "ADHOC",
         "hapiTestCrypto" to "CRYPTO",
@@ -77,8 +120,10 @@ val basePrCheckTags =
         "hapiTestTokenSerial" to "(TOKEN&SERIAL)",
         "hapiTestRestart" to "RESTART|UPGRADE",
         "hapiTestSmartContract" to "SMART_CONTRACT",
+        "hapiTestSmartContractSerial" to "(SMART_CONTRACT&SERIAL)",
         "hapiTestNDReconnect" to "ND_RECONNECT",
         "hapiTestWraps" to "WRAPS",
+        "hapiTestWrapsDownload" to "WRAPS_DOWNLOAD",
         "hapiTestCutover" to "CUTOVER",
         "hapiTestTimeConsuming" to "LONG_RUNNING",
         "hapiTestTimeConsumingSerial" to "(LONG_RUNNING&SERIAL)",
@@ -91,41 +136,9 @@ val basePrCheckTags =
         "hapiTestSimpleFees" to "SIMPLE_FEES",
         "hapiTestSimpleFeesSerial" to "(SIMPLE_FEES&SERIAL)",
         "hapiTestAtomicBatch" to "ATOMIC_BATCH",
+        "hapiTestAtomicBatchSerial" to "(ATOMIC_BATCH&SERIAL)",
         "hapiTestStateThrottling" to "(STATE_THROTTLING&SERIAL)",
     )
-
-val concurrentTasks =
-    setOf(
-        "hapiTestCrypto",
-        "hapiTestCryptoSerial",
-        "hapiTestToken",
-        "hapiTestTokenSerial",
-        "hapiTestMisc",
-        "hapiTestMiscSerial",
-        "hapiTestMiscRecords",
-        "hapiTestMiscRecordsSerial",
-        "hapiTestWraps",
-        "hapiTestCutover",
-        "hapiTestTimeConsuming",
-        "hapiTestTimeConsumingSerial",
-        "hapiTestStateThrottling",
-        "hapiTestSimpleFees",
-        "hapiTestSimpleFeesSerial",
-    )
-
-val prCheckTags =
-    buildMap<String, String> {
-        basePrCheckTags.forEach { (task, tags) ->
-
-            // XTS task → explicitly EXCLUDE MATS
-            put(task, "($tags)&(!MATS)")
-
-            // MATS task → explicitly REQUIRE MATS
-            if (task !in concurrentTasks) {
-                put("$task$matsSuffix", "($tags)&MATS")
-            }
-        }
-    }
 
 val remoteCheckTags =
     prCheckTags
@@ -133,148 +146,124 @@ val remoteCheckTags =
             it.key in
                 listOf(
                     "hapiTestIss",
-                    "hapiTestIssMATS",
                     "hapiTestRestart",
-                    "hapiTestRestartMATS",
+                    "hapiTestWrapsDownload",
                     "hapiTestToken",
                     "hapiTestTokenSerial",
                 )
         }
         .mapKeys { (key, _) -> key.replace("hapiTest", "remoteTest") }
 val prCheckStartPorts =
-    buildMap<String, String> {
-        put("hapiTestAdhoc", "25000")
-        put("hapiTestCrypto", "25200")
-        put("hapiTestToken", "25400")
-        put("hapiTestRestart", "25600")
-        put("hapiTestSmartContract", "25800")
-        put("hapiTestNDReconnect", "26000")
-        put("hapiTestTimeConsuming", "26200")
-        put("hapiTestWraps", "26300")
-        put("hapiTestIss", "26400")
-        put("hapiTestCutover", "26600")
-        put("hapiTestMisc", "26800")
-        put("hapiTestBlockNodeCommunication", "27000")
-        put("hapiTestMiscRecords", "27200")
-        put("hapiTestAtomicBatch", "27400")
-        put("hapiTestCryptoSerial", "27600")
-        put("hapiTestTokenSerial", "27800")
-        put("hapiTestMiscSerial", "28000")
-        put("hapiTestMiscRecordsSerial", "28200")
-        put("hapiTestTimeConsumingSerial", "28400")
-        put("hapiTestStateThrottling", "28600")
-        put("hapiTestSimpleFees", "28800")
-        put("hapiTestSimpleFeesSerial", "29000")
-
-        // Create the MATS variants
-        val originalEntries = toMap() // Create a snapshot of current entries
-        originalEntries.forEach { (taskName: String, port: String) ->
-            if (taskName !in concurrentTasks) put("$taskName$matsSuffix", port)
-        }
-    }
+    mapOf(
+        "hapiTestAdhoc" to "25000",
+        "hapiTestCrypto" to "25200",
+        "hapiTestToken" to "25400",
+        "hapiTestRestart" to "25600",
+        "hapiTestSmartContract" to "25800",
+        "hapiTestNDReconnect" to "26000",
+        "hapiTestTimeConsuming" to "26200",
+        "hapiTestWraps" to "26300",
+        "hapiTestIss" to "26400",
+        "hapiTestWrapsDownload" to "26500",
+        "hapiTestCutover" to "26600",
+        "hapiTestMisc" to "26800",
+        "hapiTestBlockNodeCommunication" to "27000",
+        "hapiTestMiscRecords" to "27200",
+        "hapiTestAtomicBatch" to "27400",
+        "hapiTestCryptoSerial" to "27600",
+        "hapiTestTokenSerial" to "27800",
+        "hapiTestMiscSerial" to "28000",
+        "hapiTestMiscRecordsSerial" to "28200",
+        "hapiTestTimeConsumingSerial" to "28400",
+        "hapiTestStateThrottling" to "28600",
+        "hapiTestSimpleFees" to "28800",
+        "hapiTestSimpleFeesSerial" to "29000",
+        "hapiTestAtomicBatchSerial" to "29200",
+        "hapiTestSmartContractSerial" to "29400",
+    )
 val prCheckPropOverrides =
-    buildMap<String, String> {
-        put(
-            "hapiTestAdhoc",
-            "tss.hintsEnabled=true,tss.historyEnabled=true,tss.wrapsEnabled=true,blockStream.enableStateProofs=true,block.stateproof.verification.enabled=true",
-        )
-        put(
-            "hapiTestCrypto",
-            "tss.hintsEnabled=true,tss.historyEnabled=true,tss.wrapsEnabled=false,blockStream.blockPeriod=1s,blockStream.enableStateProofs=true,block.stateproof.verification.enabled=true,hedera.transaction.maximumPermissibleUnhealthySeconds=5",
-        )
-        // TODO Add 'hedera.transaction.maximumPermissibleUnhealthySeconds=5' for all tasks using
-        // 'subprocessConcurrent'
-        put(
-            "hapiTestCryptoSerial",
-            "tss.hintsEnabled=true,tss.historyEnabled=true,tss.wrapsEnabled=false,blockStream.blockPeriod=1s,blockStream.enableStateProofs=true,block.stateproof.verification.enabled=true",
-        )
-        put("hapiTestSmartContract", "tss.historyEnabled=false")
-        put(
-            "hapiTestRestart",
-            "tss.hintsEnabled=true,tss.forceHandoffs=true,tss.initialCrsParties=16,blockStream.blockPeriod=1s,quiescence.enabled=true,blockStream.enableStateProofs=true,block.stateproof.verification.enabled=true",
-        )
-        put(
-            "hapiTestMisc",
-            "nodes.nodeRewardsEnabled=false,quiescence.enabled=true,blockStream.enableStateProofs=true,block.stateproof.verification.enabled=true,hedera.transaction.maximumPermissibleUnhealthySeconds=5",
-        )
-        put(
-            "hapiTestMiscSerial",
-            "nodes.nodeRewardsEnabled=false,quiescence.enabled=true,blockStream.enableStateProofs=true,block.stateproof.verification.enabled=true",
-        )
-        put("hapiTestTimeConsuming", "nodes.nodeRewardsEnabled=false,quiescence.enabled=true")
-        put(
-            "hapiTestWraps",
-            "tss.hintsEnabled=true,tss.historyEnabled=true,tss.wrapsEnabled=true,tss.initialCrsParties=8,staking.periodMins=16",
-        )
-        put(
-            "hapiTestCutover",
+    mapOf(
+        "hapiTestAdhoc" to
+            "tss.hintsEnabled=true,tss.historyEnabled=true,tss.wrapsEnabled=true,tss.forceMockSignatures=false,block.stateproof.verification.enabled=true",
+        "hapiTestToken" to "hedera.transaction.maximumPermissibleUnhealthySeconds=5",
+        "hapiTestCrypto" to
+            "tss.hintsEnabled=true,tss.historyEnabled=true,tss.wrapsEnabled=false,tss.forceMockSignatures=false,blockStream.blockPeriod=1s,block.stateproof.verification.enabled=true,hedera.transaction.maximumPermissibleUnhealthySeconds=5",
+        "hapiTestCryptoSerial" to
+            "tss.hintsEnabled=true,tss.historyEnabled=true,tss.wrapsEnabled=false,tss.forceMockSignatures=false,blockStream.blockPeriod=1s,block.stateproof.verification.enabled=true",
+        "hapiTestSmartContract" to
+            "blockStream.writerMode=FILE_AND_GRPC,blockStream.streamWrappedRecordBlocks=true,tss.historyEnabled=false,hedera.transaction.maximumPermissibleUnhealthySeconds=5",
+        "hapiTestSmartContractSerial" to "tss.historyEnabled=false",
+        "hapiTestRestart" to
+            "tss.hintsEnabled=true,tss.forceHandoffs=true,tss.forceMockSignatures=false,blockStream.blockPeriod=1s,quiescence.enabled=true,block.stateproof.verification.enabled=true,hedera.transaction.maximumPermissibleUnhealthySeconds=5,platform.wiring.healthLogThreshold=5s",
+        "hapiTestWrapsDownload" to
+            "tss.hintsEnabled=true,tss.forceHandoffs=true,tss.initialCrsParties=16,blockStream.blockPeriod=1s,quiescence.enabled=true,block.stateproof.verification.enabled=true,tss.wrapsProvingKeyDownloadEnabled=true,tss.wrapsProvingKeyPath=testfiles/valid-wraps-proving-key.tar.gz,tss.wrapsProvingKeyHash=76bf521149f6b6a35590b8c9089c40bbd44034c4b30c17fa6ac3537a8a0b4143ebdbff25e156c8c4c1553c11f35769a1",
+        "hapiTestMisc" to
+            "blockStream.writerMode=FILE_AND_GRPC,blockStream.streamWrappedRecordBlocks=true,nodes.nodeRewardsEnabled=false,quiescence.enabled=true,block.stateproof.verification.enabled=true,hedera.transaction.maximumPermissibleUnhealthySeconds=5",
+        "hapiTestMiscSerial" to
+            "nodes.nodeRewardsEnabled=false,quiescence.enabled=true,block.stateproof.verification.enabled=true",
+        "hapiTestTimeConsuming" to
+            "nodes.nodeRewardsEnabled=false,quiescence.enabled=true,hedera.transaction.maximumPermissibleUnhealthySeconds=5",
+        "hapiTestWraps" to
+            "tss.hintsEnabled=true,tss.historyEnabled=true,tss.wrapsEnabled=true,tss.forceMockSignatures=false,staking.periodMins=16",
+        // Superseded by the entry below which adds tss.initialCrsParties=8; the original
+        // buildMap had two put() calls for hapiTestCutover and the second silently overwrote the
+        // first. Kept here for reference in case tss.forceMockSignatures=false needs to be
+        // restored.
+        // "hapiTestCutover" to
+        //
+        // "tss.hintsEnabled=false,tss.historyEnabled=false,tss.wrapsEnabled=false,tss.forceMockSignatures=false,staking.periodMins=16",
+        "hapiTestCutover" to
             "tss.hintsEnabled=false,tss.historyEnabled=false,tss.wrapsEnabled=false,tss.initialCrsParties=8,staking.periodMins=16",
-        )
-        put("hapiTestTimeConsumingSerial", "nodes.nodeRewardsEnabled=false,quiescence.enabled=true")
-        put("hapiTestStateThrottling", "nodes.nodeRewardsEnabled=false,quiescence.enabled=true")
-        put(
-            "hapiTestMiscRecords",
-            "blockStream.streamMode=RECORDS,nodes.nodeRewardsEnabled=false,quiescence.enabled=true,blockStream.enableStateProofs=true,block.stateproof.verification.enabled=true,hedera.transaction.maximumPermissibleUnhealthySeconds=5",
-        )
-        put(
-            "hapiTestMiscRecordsSerial",
-            "blockStream.streamMode=RECORDS,nodes.nodeRewardsEnabled=false,quiescence.enabled=true,blockStream.enableStateProofs=true,block.stateproof.verification.enabled=true",
-        )
-        put("hapiTestSimpleFees", "fees.simpleFeesEnabled=true")
-        put("hapiTestSimpleFeesSerial", "fees.simpleFeesEnabled=true")
-        put(
-            "hapiTestNDReconnect",
-            "blockStream.enableStateProofs=true,block.stateproof.verification.enabled=true",
-        )
-        put("hapiTestAtomicBatch", "nodes.nodeRewardsEnabled=false,quiescence.enabled=true")
-
-        val originalEntries = toMap() // Create a snapshot of current entries
-        originalEntries.forEach { (taskName: String, overrides: String) ->
-            if (taskName !in concurrentTasks) put("$taskName$matsSuffix", overrides)
-        }
-    }
-val prCheckPrepareUpgradeOffsets =
-    buildMap<String, String> {
-        put("hapiTestAdhoc", "PT300S")
-
-        val originalEntries = toMap() // Create a snapshot of current entries
-        originalEntries.forEach { (taskName: String, offset: String) ->
-            if (taskName !in concurrentTasks) put("$taskName$matsSuffix", offset)
-        }
-    }
+        "hapiTestTimeConsumingSerial" to "nodes.nodeRewardsEnabled=false,quiescence.enabled=true",
+        "hapiTestStateThrottling" to "nodes.nodeRewardsEnabled=false,quiescence.enabled=true",
+        "hapiTestMiscRecords" to
+            "blockStream.streamMode=RECORDS,nodes.nodeRewardsEnabled=false,quiescence.enabled=true,block.stateproof.verification.enabled=true,hedera.transaction.maximumPermissibleUnhealthySeconds=5",
+        "hapiTestMiscRecordsSerial" to
+            "blockStream.streamMode=RECORDS,nodes.nodeRewardsEnabled=false,quiescence.enabled=true,block.stateproof.verification.enabled=true",
+        "hapiTestSimpleFees" to
+            "fees.simpleFeesEnabled=true,hedera.transaction.maximumPermissibleUnhealthySeconds=5,hooks.hooksEnabled=true",
+        "hapiTestSimpleFeesSerial" to "fees.simpleFeesEnabled=true",
+        "hapiTestNDReconnect" to "block.stateproof.verification.enabled=true",
+        "hapiTestAtomicBatch" to
+            "nodes.nodeRewardsEnabled=false,quiescence.enabled=true,hedera.transaction.maximumPermissibleUnhealthySeconds=5",
+        "hapiTestAtomicBatchSerial" to "nodes.nodeRewardsEnabled=false,quiescence.enabled=true",
+    )
+val prCheckPlatformOverrides = mapOf("hapiTestRestart" to "platformStatus.observingStatusDelay=10s")
+val prCheckPrepareUpgradeOffsets = mapOf("hapiTestAdhoc" to "PT300S")
 val prCheckAssertAtLeastOneWraps = setOf("hapiTestWraps", "hapiTestCutover")
-// (FUTURE) Determine what the TSS_LIB_WRAPS_ARTIFACTS_PATH will be in CI and set it here
-val prCheckTssLibWrapsArtifactsPaths = mapOf("hapiTestWraps" to "", "hapiTestCutover" to "")
+// (FUTURE) Determine what the TSS_LIB_WRAPS_ARTIFACTS_PATH will be for each task in CI; set it here
+val prCheckTssLibWrapsArtifactsPaths =
+    mapOf("hapiTestWraps" to "", "hapiTestCutover" to "", "hapiTestWrapsDownload" to "data/keys")
 // Use to override the default network size for a specific test task
 val prCheckNetSizeOverrides =
-    buildMap<String, String> {
-        put("hapiTestAdhoc", "3")
-        put("hapiTestCrypto", "3")
-        put("hapiTestCryptoSerial", "3")
-        put("hapiTestToken", "3")
-        put("hapiTestSimpleFees", "3")
-        put("hapiTestSimpleFeesSerial", "3")
-        put("hapiTestTokenSerial", "3")
-        put("hapiTestSmartContract", "4")
-
-        val originalEntries = toMap() // Create a snapshot of current entries
-        originalEntries.forEach { (taskName: String, size: String) ->
-            if (taskName !in concurrentTasks) put("$taskName$matsSuffix", size)
-        }
-    }
+    mapOf(
+        "hapiTestAdhoc" to "3",
+        "hapiTestCrypto" to "3",
+        "hapiTestCryptoSerial" to "3",
+        "hapiTestToken" to "3",
+        "hapiTestSimpleFees" to "3",
+        "hapiTestSimpleFeesSerial" to "3",
+        "hapiTestTokenSerial" to "3",
+        "hapiTestSmartContract" to "3",
+        "hapiTestSmartContractSerial" to "3",
+        "hapiTestAtomicBatch" to "3",
+        "hapiTestAtomicBatchSerial" to "3",
+        "hapiTestStateThrottling" to "3",
+    )
 
 tasks {
     prCheckTags.forEach { (taskName, _) ->
         register(taskName) {
-            getByName(taskName).group =
-                "hapi-test${if (taskName.endsWith(matsSuffix)) "-mats" else ""}"
+            getByName(taskName).group = "hapi-test"
             dependsOn(
                 if (
                     (taskName.contains("Crypto") ||
                         taskName.contains("Token") ||
                         taskName.contains("Misc") ||
                         taskName.contains("TimeConsuming") ||
-                        taskName.contains("SimpleFees")) && !taskName.contains("Serial")
+                        taskName.contains("SimpleFees") ||
+                        taskName.contains("AtomicBatch") ||
+                        taskName.contains("SmartContract")) && !taskName.contains("Serial")
                 )
                     "testSubprocessConcurrent"
                 else "testSubprocess"
@@ -287,6 +276,14 @@ tasks {
 tasks.register<Test>("testSubprocess") {
     testClassesDirs = sourceSets.main.get().output.classesDirs
     classpath = configurations.runtimeClasspath.get().plus(files(tasks.jar))
+    outputs.upToDateWhen { false } // Don't skip execution of hapi test tasks
+
+    // Isolate each subtask's working directory so logs are not overwritten
+    val subtaskName =
+        gradle.startParameter.taskNames.firstOrNull { prCheckTags.containsKey(it) } ?: ""
+    if (subtaskName.isNotBlank()) {
+        systemProperty("hapi.spec.subtask.name", subtaskName)
+    }
 
     val ciTagExpression =
         gradle.startParameter.taskNames
@@ -331,6 +328,15 @@ tasks.register<Test>("testSubprocess") {
     // Only set the system property if non-empty
     if (testOverrides.isNotBlank()) {
         systemProperty("hapi.spec.test.overrides", testOverrides)
+    }
+
+    // Gather platform-level overrides (settings.txt) into a single comma-separated list
+    val platformOverrides =
+        gradle.startParameter.taskNames
+            .mapNotNull { prCheckPlatformOverrides[it] }
+            .joinToString(separator = ",")
+    if (platformOverrides.isNotBlank()) {
+        systemProperty("hapi.spec.platform.overrides", platformOverrides)
     }
 
     if (gradle.startParameter.taskNames.any(prCheckAssertAtLeastOneWraps::contains)) {
@@ -391,12 +397,14 @@ tasks.register<Test>("testSubprocess") {
         "org.junit.jupiter.api.ClassOrderer\$OrderAnnotation",
     )
 
-    // Limit heap and number of processors
-    maxHeapSize = "8g"
+    // Scale heap and processor count to match available resources
+    maxHeapSize = testMaxHeap
+    // Limit forked node JVM heap to avoid overcommitting container/runner memory
+    systemProperty("hapi.spec.node.poolMib", "$nodePoolMib")
     // Fix testcontainers module system access to commons libraries
     // testcontainers 2.0.2 is a named module but doesn't declare its module-info dependencies
     jvmArgs(
-        "-XX:ActiveProcessorCount=6",
+        "-XX:ActiveProcessorCount=$testProcessorCount",
         "--add-reads=org.testcontainers=org.apache.commons.lang3",
         "--add-reads=org.testcontainers=org.apache.commons.compress",
         "--add-reads=org.testcontainers=org.apache.commons.io",
@@ -408,6 +416,14 @@ tasks.register<Test>("testSubprocess") {
 tasks.register<Test>("testSubprocessConcurrent") {
     testClassesDirs = sourceSets.main.get().output.classesDirs
     classpath = configurations.runtimeClasspath.get().plus(files(tasks.jar))
+    outputs.upToDateWhen { false } // Don't skip execution of hapi test tasks
+
+    // Isolate each subtask's working directory so logs are not overwritten
+    val subtaskName =
+        gradle.startParameter.taskNames.firstOrNull { prCheckTags.containsKey(it) } ?: ""
+    if (subtaskName.isNotBlank()) {
+        systemProperty("hapi.spec.subtask.name", subtaskName)
+    }
 
     val ciTagExpression =
         gradle.startParameter.taskNames
@@ -454,6 +470,15 @@ tasks.register<Test>("testSubprocessConcurrent") {
     // Only set the system property if non-empty
     if (testOverrides.isNotBlank()) {
         systemProperty("hapi.spec.test.overrides", testOverrides)
+    }
+
+    // Gather platform-level overrides (settings.txt) into a single comma-separated list
+    val platformOverrides =
+        gradle.startParameter.taskNames
+            .mapNotNull { prCheckPlatformOverrides[it] }
+            .joinToString(separator = ",")
+    if (platformOverrides.isNotBlank()) {
+        systemProperty("hapi.spec.platform.overrides", platformOverrides)
     }
 
     if (gradle.startParameter.taskNames.any(prCheckAssertAtLeastOneWraps::contains)) {
@@ -508,23 +533,43 @@ tasks.register<Test>("testSubprocessConcurrent") {
     systemProperty("junit.jupiter.execution.parallel.mode.default", "concurrent")
     systemProperty("junit.jupiter.execution.parallel.mode.classes.default", "concurrent")
     // Limit concurrent test classes to prevent transaction backlog
-    // Use fixed strategy with limited parallelism to balance speed and stability
+    // Use fixed strategy with parallelism based on node count: 3 nodes → 3 threads, 4 nodes → 2
+    // threads
+    val testParallelism = if ((networkSize.toIntOrNull() ?: 4) <= 3) 3 else 2
     systemProperty("junit.jupiter.execution.parallel.config.strategy", "fixed")
-    systemProperty("junit.jupiter.execution.parallel.config.fixed.parallelism", "4")
+    systemProperty("junit.jupiter.execution.parallel.config.fixed.parallelism", "$testParallelism")
     systemProperty(
         "junit.jupiter.testclass.order.default",
         "org.junit.jupiter.api.ClassOrderer\$OrderAnnotation",
     )
 
-    // Limit heap and number of processors
-    maxHeapSize = "8g"
-    jvmArgs("-XX:ActiveProcessorCount=6")
+    // Scale heap and processor count to match available resources
+    maxHeapSize = testMaxHeap
+    // Limit forked node JVM heap to avoid overcommitting container/runner memory
+    systemProperty("hapi.spec.node.poolMib", "$nodePoolMib")
+    // Fix testcontainers module system access to commons libraries
+    // testcontainers 2.0.2 is a named module but doesn't declare its module-info dependencies
+    jvmArgs(
+        "-XX:ActiveProcessorCount=$testProcessorCount",
+        "--add-reads=org.testcontainers=org.apache.commons.lang3",
+        "--add-reads=org.testcontainers=org.apache.commons.compress",
+        "--add-reads=org.testcontainers=org.apache.commons.io",
+        "--add-reads=org.testcontainers=org.apache.commons.codec",
+    )
     maxParallelForks = 1
 }
 
 tasks.register<Test>("testRemote") {
     testClassesDirs = sourceSets.main.get().output.classesDirs
     classpath = configurations.runtimeClasspath.get().plus(files(tasks.jar))
+    outputs.upToDateWhen { false } // Don't skip execution of hapi test tasks
+
+    // Isolate each subtask's working directory so logs are not overwritten
+    val subtaskName =
+        gradle.startParameter.taskNames.firstOrNull { remoteCheckTags.containsKey(it) } ?: ""
+    if (subtaskName.isNotBlank()) {
+        systemProperty("hapi.spec.subtask.name", subtaskName)
+    }
 
     systemProperty("hapi.spec.remote", "true")
     // Support overriding a single remote target network for all executing specs
@@ -583,34 +628,29 @@ tasks.register<Test>("testRemote") {
         "org.junit.jupiter.api.ClassOrderer\$OrderAnnotation",
     )
 
-    // Limit heap and number of processors
-    maxHeapSize = "8g"
-    jvmArgs("-XX:ActiveProcessorCount=6")
+    // Scale heap and processor count to match available resources
+    maxHeapSize = testMaxHeap
+    jvmArgs("-XX:ActiveProcessorCount=$testProcessorCount")
     maxParallelForks = 1
 }
 
 val embeddedTasks =
-    setOf("hapiTestCryptoEmbedded", "hapiTestMiscEmbedded", "hapiEmbeddedSimpleFees")
+    setOf(
+        "hapiTestCryptoEmbedded",
+        "hapiTestMiscEmbedded",
+        "hapiTestSimpleFeesEmbedded",
+        "hapiTestAtomicBatchEmbedded",
+    )
 
 val embeddedBaseTags =
     mapOf(
-        "hapiTestMiscEmbedded" to "EMBEDDED&!(SIMPLE_FEES|CRYPTO)",
-        "hapiEmbeddedSimpleFees" to "EMBEDDED&SIMPLE_FEES",
+        "hapiTestMiscEmbedded" to "EMBEDDED&!(SIMPLE_FEES|CRYPTO|ATOMIC_BATCH)",
+        "hapiTestSimpleFeesEmbedded" to "EMBEDDED&SIMPLE_FEES",
         "hapiTestCryptoEmbedded" to "EMBEDDED&CRYPTO",
+        "hapiTestAtomicBatchEmbedded" to "EMBEDDED&ATOMIC_BATCH",
     )
 
-val prEmbeddedCheckTags =
-    buildMap<String, String> {
-        embeddedBaseTags.forEach { (taskName, tags) ->
-            // XTS embedded → all tests
-            put(taskName, "($tags)")
-
-            // Embedded MATS variant → REQUIRE MATS
-            if (taskName !in embeddedTasks) {
-                put("$taskName$matsSuffix", "($tags)&MATS")
-            }
-        }
-    }
+val prEmbeddedCheckTags = embeddedBaseTags.mapValues { (_, tags) -> "($tags)" }
 
 tasks {
     prEmbeddedCheckTags.forEach { (taskName, _) ->
@@ -625,6 +665,14 @@ tasks {
 tasks.register<Test>("testEmbedded") {
     testClassesDirs = sourceSets.main.get().output.classesDirs
     classpath = configurations.runtimeClasspath.get().plus(files(tasks.jar))
+    outputs.upToDateWhen { false } // Don't skip execution of hapi test tasks
+
+    // Isolate each subtask's working directory so logs are not overwritten
+    val subtaskName =
+        gradle.startParameter.taskNames.firstOrNull { prEmbeddedCheckTags.containsKey(it) } ?: ""
+    if (subtaskName.isNotBlank()) {
+        systemProperty("hapi.spec.subtask.name", subtaskName)
+    }
 
     val ciTagExpression =
         gradle.startParameter.taskNames
@@ -660,32 +708,19 @@ tasks.register<Test>("testEmbedded") {
     systemProperty("hapi.spec.default.shard", 0)
     systemProperty("hapi.spec.default.realm", 0)
 
-    if (
-        gradle.startParameter.taskNames.contains("hapiEmbeddedSimpleFees") ||
-            gradle.startParameter.taskNames.contains("hapiEmbeddedSimpleFeesMATS")
-    ) {
+    if (gradle.startParameter.taskNames.contains("hapiTestSimpleFeesEmbedded")) {
         systemProperty("fees.createSimpleFeeSchedule", "true")
         systemProperty("fees.simpleFeesEnabled", "true")
     }
 
-    // Limit heap and number of processors
-    maxHeapSize = "8g"
-    jvmArgs("-XX:ActiveProcessorCount=6")
+    // Scale heap and processor count to match available resources
+    maxHeapSize = testMaxHeap
+    jvmArgs("-XX:ActiveProcessorCount=$testProcessorCount")
 }
 
 val repeatableBaseTags = mapOf("hapiTestMiscRepeatable" to "REPEATABLE&!CRYPTO")
 
-val prRepeatableCheckTags =
-    buildMap<String, String> {
-        repeatableBaseTags.forEach { (taskName, tags) ->
-
-            // XTS repeatable → EXCLUDE MATS
-            put(taskName, "($tags)&(!MATS)")
-
-            // Repeatable MATS variant → REQUIRE MATS
-            put("$taskName$matsSuffix", "($tags)&MATS")
-        }
-    }
+val prRepeatableCheckTags = repeatableBaseTags.mapValues { (_, tags) -> "($tags)" }
 
 tasks {
     prRepeatableCheckTags.forEach { (taskName, _) ->
@@ -698,6 +733,14 @@ tasks {
 tasks.register<Test>("testRepeatable") {
     testClassesDirs = sourceSets.main.get().output.classesDirs
     classpath = configurations.runtimeClasspath.get().plus(files(tasks.jar))
+    outputs.upToDateWhen { false } // Don't skip execution of hapi test tasks
+
+    // Isolate each subtask's working directory so logs are not overwritten
+    val subtaskName =
+        gradle.startParameter.taskNames.firstOrNull { prRepeatableCheckTags.containsKey(it) } ?: ""
+    if (subtaskName.isNotBlank()) {
+        systemProperty("hapi.spec.subtask.name", subtaskName)
+    }
 
     val ciTagExpression =
         gradle.startParameter.taskNames
@@ -723,14 +766,25 @@ tasks.register<Test>("testRepeatable") {
     // Tell our launcher to target a repeatable embedded network
     systemProperty("hapi.spec.embedded.mode", "repeatable")
 
-    // Limit heap and number of processors
-    maxHeapSize = "8g"
-    jvmArgs("-XX:ActiveProcessorCount=6")
+    // Scale heap and processor count to match available resources
+    maxHeapSize = testMaxHeap
+    jvmArgs("-XX:ActiveProcessorCount=$testProcessorCount")
+
+    // Pass a system property "KEY=VALUE" to the test JVM via "-PsysProp.KEY=VALUE"
+    project.properties
+        .filter { (k, _) -> k.startsWith("sysProp.") }
+        .forEach { (k, v) -> systemProperty(k.removePrefix("sysProp."), v.toString()) }
 }
 
 application.mainClass = "com.hedera.services.bdd.suites.SuiteRunner"
 
-tasks.shadowJar { archiveFileName.set("SuiteRunner.jar") }
+tasks.shadowJar {
+    archiveFileName.set("SuiteRunner.jar")
+    // Declares JNI usage (netty's NativeLibraryUtil) so the JDK does not print a
+    // restricted-method warning for callers in the unnamed module of this JAR
+    // when launched via `java -jar`.
+    manifest { attributes("Enable-Native-Access" to "ALL-UNNAMED") }
+}
 
 val rcdiffJar =
     tasks.register<ShadowJar>("rcdiffJar") {
@@ -740,5 +794,12 @@ val rcdiffJar =
         archiveFileName = "rcdiff.jar"
         configurations = listOf(project.configurations["rcdiffRuntimeClasspath"])
 
-        manifest { attributes("Main-Class" to "com.hedera.services.rcdiff.RcDiffCmdWrapper") }
+        manifest {
+            attributes(
+                "Main-Class" to "com.hedera.services.rcdiff.RcDiffCmdWrapper",
+                // Declares JNI usage (netty's NativeLibraryUtil) so the JDK does not print a
+                // restricted-method warning for callers in the unnamed module of this JAR.
+                "Enable-Native-Access" to "ALL-UNNAMED",
+            )
+        }
     }
